# RAction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  second_level_hierarchy.xlsx  test.txt
.github/workflows/: dev_deployment.yml  fancy_coverage.yml  main_deployment.yml  pull_pep8.yml  test_deployment.yml
Evidence/ILO 3/: SPECIFIX-GDPR-Checklist.xlsx
Fracture Reduction/Reinforcement Learning/: adjust_center_volume.ipynb  env_wrapper.py
Fracture_Reduction/: matrixifier.ipynb  unzipper.ipynb
Fracture_Reduction/AutoEncoder/: first_try.ipynb  second_try.ipynb
Fracture_Reduction/Reinforcement_Learning/: rl_simulation.py  rl_simulation_multiple_objects.py  rl_training.py  sim_class.py  stl to obj.py  training.py
Meetings/: Meeting Specifix 19.docx
api/: __init__.py
api/templates/: homepage.html
autoencoders_old/: AutoEncoder_2D.ipynb  AutoEncoder_2D_3dim.ipynb  AutoEncoder_3D.ipynb  autoencoder_test.ipynb
blender_pipeline/: bulk_remesher.py  remesher.py  remesher_adv.py
config/: conf.py_t  keep_documentation.py
dataset_generators_old/: coronal_dataset_generator.ipynb  map.py  plane_generation.ipynb  vtk_test.ipynb
docs/: conf.py  index.rst  specifix.segmentation.cli.io.rst  specifix.segmentation.cli.rst
new_environment/: Simulation.py  env_test.ipynb  trimesh.ipynb
new_environment/MARL_2_clean/: inference.py  train.py
presentation_material/: mesh_comparison.ipynb
rl_test/cnn_curriculum/: env_wrapper.py  (+3 more)
specifix/: __init__.py  cli_test.py  generate_nifti_from_nrrd.py  generate_nifti_from_nrrd_new.py  mesh_generation.py
(+69 files in other folders)
