[tool.poetry]
name = "specifix"
version = "0.1.0"
description = "Specialisation Project"
authors = ["Borislav Nachev <220472@buas.nl>",
    "Vlad Bogdan Narcis Matache <224108@buas.nl",
    "Wesley van Gaalen <224682@buas.nl>",
    "Francisco R. Mansilha <220387@buas.nl>",
    "Alliyah de Sousa e Sá <246735@buas.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0, <=3.11.20"
pydicom = "2.4.4"
simpleitk = "^2.4.0"
argparse = "^1.4.0"
nibabel = "^5.2.1"
scikit-image = "^0.24.0"
vtk = "^9.3.1"
pyvtk = "^0.5.18"
glob2 = "^0.7"
batchgenerators = "^0.25"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
torchrl = "0.4.0"
torch = "2.3.1"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
jupyter = "^1.1.1"
python-dotenv = "^1.0.1"
numpy = "1.24.4"
blosc2 = "2.5.1"
nnunetv2 = "2.2.1"
acvl-utils = "0.2"
poetry-plugin-export = "^1.8.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx_rtd_theme = "2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
coverage = "^7.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
